[package]
name = "test-rust-project"
version = "0.1.0"
authors = ["raguc"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
rand = "0.8.0"
test-profiler = { path = "../test-profiler" }
profiler-macro = { path = "../profiler-macro" }
